// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar render default 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-light bg-light"
>
  <ul
    className="navbar-nav"
  />
</nav>
`;

exports[`Navbar should render with children 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-light bg-light"
>
  <ul
    className="navbar-nav"
  >
    children
  </ul>
</nav>
`;

exports[`Navbar should render with children and className 1`] = `
<nav
  className="test-class navbar navbar-expand-lg navbar-light bg-light"
>
  <ul
    className="navbar-nav"
  >
    children
  </ul>
</nav>
`;
